cargo-features = ["edition2024"]

[package]
name = "vault_program"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.6.0"
solana-program = "1.18"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-panic = []
custom-heap = []
